--- a/Pages/about.css
+++ b/Pages/about.css
@@ -95,3 +95,70 @@ body{
     font-weight: 400;
     margin-top: 10px;
 }
+/* call to actions style */
+.call-to-action{
+    margin-top: 120px;
+    background-image: url("https://templatemo.com/templates/templatemo_574_mexant/assets/images/cta-bg.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    padding: 80px 0px;
+}
+.call-to-action .container{
+    display: flex;
+    justify-content: space-between;
+    
+
+}
+
+
+.call-to-action .container .call-to-actions-infor h4{
+    
+    font-size: 36px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    line-height: 50px;
+}
+
+.call-to-action .container .call-to-actions-infor h4 strong{
+    color: rgb(255,81,26);
+    font-weight: 700;
+}
+
+.call-to-actions-infor h4 em{
+    font-style: normal;
+    color: rgb(67,186,127);
+}
+
+.call-to-actions-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.call-to-actions-btns .discover{
+
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(67, 186, 127);
+    padding: 12px 30px;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    letter-spacing: 0.5px;
+}
+
+.call-to-actions-btns a{
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 81, 26);
+    padding: 12px 30px;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    letter-spacing: 0.5px;
+    transition: 0.3s;
+    text-decoration: none;
+}
