--- a/Pages/about.css
+++ b/Pages/about.css
@@ -162,3 +162,93 @@ body{
     transition: 0.3s;
     text-decoration: none;
 }
+
+/* steps to do style */
+.steps-to-do{
+    margin-top: 120px;
+}
+.steps-to-do .container{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap: 10px;
+
+}
+
+ .steps-to-do .container .left-contents{
+    grid-column: 1 /span 2;
+    grid-row: 1 /span 2; 
+}
+
+
+
+.container .left-contents .left-contents-infor h4{
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 40px;
+    margin-bottom: 40px
+}
+
+
+ .container .left-contents .left-contents-infor p{
+    font-size: 15px;
+    line-height: 26px;
+    color: rgb(33, 39, 65);
+    margin-bottom: 40px;
+}
+
+.left-contents .discover-btn a{
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(67, 186, 127);
+    padding: 12px 30px;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    letter-spacing: 0.5px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+
+
+
+.container .right-contents{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column: 3/span 5;
+    gap: 20px;
+    margin-left: 30px;
+   
+}
+
+.container .right-contents .item{
+    border-radius: 5px;
+    padding: 40px 30px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 15px;
+    margin-bottom: 20px;
+    position: relative;
+    width: 268px;
+    height: 180px;
+}
+
+.container .right-contents .item em{
+    position: absolute;
+    font-style: normal;
+    font-size: 44px;
+    color: rgb(67, 186, 127);
+    font-weight: 600;
+    right: 15px;
+    top: 10px;
+}
+
+.container .right-contents .item h4{
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 22px;
+}
+
+.container .right-contents .item p{
+    font-size: 15px;
+    line-height: 26px;
+    color: #212741;
+}
