--- a/Pages/ourservices.css
+++ b/Pages/ourservices.css
@@ -41,3 +41,59 @@ body{
     background-color: #fff;
     margin: 20px auto 
 }
+
+.main-services{
+    margin-top: 120px;
+}
+
+ .main-services .container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    
+    
+}
+ .main-services .container .service-item{
+    display: flex;
+    align-self: center;
+    gap: 60px; 
+    margin-bottom: 60px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid #ecf8f2;
+}
+
+.main-services .container img{
+    width: 100%;
+    border-radius: 5px;
+} 
+
+.main-services .container .service-item .main-services-content{
+    margin-left: 15px;
+}
+
+.main-services .container .service-item .main-services-content i{
+    font-size: 64px;
+    color: #43ba7f;
+    background-color: #ecf8f2;
+    width: 120px;
+    height: 120px;
+    text-align: center;
+    line-height: 120px;
+    border-radius: 5px;
+}
+
+.container .main-services-content h4{
+    font-size: 36px;
+    font-weight: 700;
+    color: #212741;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+.container .main-services-content p{
+    font-size: 15px;
+    line-height: 26px;
+    color: #212741;
+}
+
+
