added comment for section contact us heading

--- a/Pages/contactus.css
+++ b/Pages/contactus.css
@@ -18,6 +18,7 @@ body{
     max-width: 1120px;
     margin-inline:auto;
 }
+/* Contact Us page heading style */
 .contacts-heading{
     background-image: url("https://templatemo.com/templates/templatemo_574_mexant/assets/images/heading-bg.jpg");
     background-size: cover;
