--- a/Pages/contactus.css
+++ b/Pages/contactus.css
@@ -43,3 +43,75 @@ body{
     background-color: #fff;
     margin: 20px auto 
 }
+/* map section style */
+.maps{
+    margin-top: 100px;
+    
+    
+}
+.maps .container{
+    max-width: 1320px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    
+    
+}
+
+ .maps .container .map .map-frame iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1290px;
+    height: 450px;
+     border:0;
+    border-radius: 5px;
+    
+}
+/* infor-boxes style */
+.maps .container .info-grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    margin-top: 400px;
+    margin-left: 50px;
+    width: 90%;
+
+}
+.info-grid .info-item{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    /*  */
+    text-align: center;
+    padding: 40px 30px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    margin-top: -60px;
+    margin-left: 15px;
+    margin-right: 15px;
+    z-index: 2;
+
+
+}
+
+.info-grid .info-item i{
+    font-size: 36px;
+    color: #43ba7f;
+    margin-bottom: 25px;
+}
+.info-grid .info-item h4{
+    font-size: 18px;
+    color: #212741;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+.info-grid .info-item a{
+    font-size: 15px;
+    font-weight: 600;
+    color: #43ba7f;
+    transition: all 0.3s;
+    text-decoration: none;
+
+}
