added About page heading responsive design

--- a/Pages/about.css
+++ b/Pages/about.css
@@ -24,10 +24,13 @@ body{
     background-position: center;
     padding: 215px 0px 120px 0px;
     text-align: center;
+    /*  */
+    display: flex;
 }
 .about-heading .container{
     display: flex;
     flex-direction: column;
+    padding: 20px;
 }
 .about-heading .container h2{
     font-size: 56px;
@@ -45,13 +48,16 @@ body{
 .about-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    /* grid-template-columns: repeat(auto-fill,minmax(700px,1fr)); */
     gap: 30px;
     margin-top: 120px;
+    
 }
 .about-container .left-img img{
     width: 100%;
     border-radius: 10px;
 }
+
 .about-container .provided-services{
     border-radius: 5px;
     padding: 50px 40px;
@@ -251,4 +257,37 @@ body{
     font-size: 15px;
     line-height: 26px;
     color: #212741;
+}
+
+/* RESPONSIVE DESIGN OF THE ABOUT PAGE*/
+@media(max-width:768px){
+   /* about heading respnsive */
+   .about-heading{
+    min-width: 750px;
+    
+   }
+
+    .about-container{
+        grid-template-columns: 1fr;
+        min-width: 750px;
+        
+    }
+    
+ .about-container .provided-services .service .Service-title span{
+    /* font-size: 19.2px; */
+    font-size: 30px;
+    color: rgb(39,39,65);
+    font-weight: 600;
+    line-height: 28.8px;
+    
+}
+.service .service-Description{ 
+   font-size: 30px;
+   line-height: 50px;
+    color: rgb(33, 65, 47);
+    padding: 0px 0px 30px;
+    font-weight: 400;
+    margin-top: 10px;
+
+}
 }
