--- a/Pages/about.css
+++ b/Pages/about.css
@@ -24,8 +24,8 @@ body{
     background-position: center;
     padding: 215px 0px 120px 0px;
     text-align: center;
-    /*  */
-    display: flex;
+    width: 100%;
+
 }
 .about-heading .container{
     display: flex;
@@ -114,7 +114,7 @@ body{
 .call-to-action .container{
     display: flex;
     justify-content: space-between;
-    
+
 
 }
 
@@ -274,7 +274,7 @@ body{
     }
     
  .about-container .provided-services .service .Service-title span{
-    /* font-size: 19.2px; */
+
     font-size: 30px;
     color: rgb(39,39,65);
     font-weight: 600;
@@ -290,4 +290,130 @@ body{
     margin-top: 10px;
 
 }
+/* call to action Responsive */
+.call-to-action{
+    min-width: 750px;
+    max-width: 100%;
+    
+
+} 
+.call-to-action .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    
+    
+}
+
+.call-to-action .container .call-to-actions-infor h4{
+    
+    font-size: 50px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    line-height: 70px;
+    
+}
+.call-to-actions-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 20px;
+}
+.call-to-actions-btns .discover {
+
+     font-size: 30px;
+    padding: 20px 30px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+.call-to-actions-btns a{
+
+     font-size: 30px;
+    padding: 20px 30px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+/* steps responsive */
+
+  /* left content responsive style */
+ .steps-to-do .container .left-contents{
+    grid-column: 1/span 5;
+    min-width: 700px;
+    margin-top: 30px;
+ }
+ .container .left-contents .left-contents-infor h4{
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 60px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+
+ .container .left-contents .left-contents-infor p{
+    font-size: 30px;
+    line-height: 50px;
+    text-align: center;
+    color: rgb(33, 39, 65);
+    margin-bottom: 40px;
+}
+
+.left-contents .discover-btn a{
+    font-size: 30px;
+    padding: 30px 60px;
+    border-radius: 15px;
+    font-weight: 700;
+    margin-left: 30px;
+    
+    
+
+}
+
+ /* right content responsive style */
+ .container .right-contents{
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column: 1/span 5;
+   gap: 20px;
+   min-width: 750px;
+   margin-top: 60px;
+   
+   
+} 
+.container .right-contents .item {
+
+    border-radius: 15px;
+    padding: 80px 60px;
+    width: 100%;
+    height: 250px;
+    position: relative;
+    
+}
+.container .right-contents .item em{
+    position: absolute;
+    font-style: normal;
+    font-size: 80px;
+    color: rgb(67, 186, 127);
+    font-weight: 700;
+    right: 15px;
+    top: 10px;
+}
+
+.container .right-contents .item h4{
+    font-size: 35px;
+    font-weight: 600;
+    margin-bottom: 22px;
+}
+
+.container .right-contents .item p{
+    font-size: 30px;
+    line-height: 45px;
+    color: #212741;
+}
+
 }
