--- a/Pages/ourservices.css
+++ b/Pages/ourservices.css
@@ -224,7 +224,7 @@ body{
     color: #212741;
     background-color: #fff;
     cursor: pointer;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     font-weight: 600;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
@@ -280,4 +280,139 @@ body{
     margin-bottom: 12px;
     line-height: 25px;
     
+}
+
+/* Responsive Design For Mobiles and Tablets */
+@media(max-width:768px){
+    /* main service responsive style */
+    .main-services .container .service-item{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+    min-width: 700px;
+    
+}
+.container .main-services-content h4{
+    font-size: 50px;
+    font-weight: 800;
+}
+
+.container .main-services-content p{
+    font-size: 30px;
+    line-height: 60px;
+    
+}
+/* call to actions responsive style */
+.call-to-action{
+    min-width: 750px;
+    max-width: 100%;
+    
+
+} 
+.call-to-action .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    
+    
+}
+
+.call-to-action .container .call-to-actions-infor h4{
+    
+    font-size: 50px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    line-height: 70px;
+    
+}
+.call-to-actions-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 20px;
+}
+.call-to-actions-btns .discover {
+
+     font-size: 30px;
+    padding: 20px 30px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+.call-to-actions-btns a{
+
+     font-size: 30px;
+    padding: 20px 30px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+/* section Details responsive style */
+.service-details .container .service-heading{
+    min-width: 700px;
+}
+.service-details .container .service-heading h6{
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.service-details .container .service-heading h4{
+     margin-top: 10px;
+    line-height: 70px;
+    font-size: 60px;
+    font-weight: 800;
+    text-align: center;
+} 
+/* service Details responsive style */
+.service-tabs{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    min-width: 700px;
+}
+.service-details-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    min-width: 700px; 
+}
+.service-tabs span{
+    padding: 30px 40px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 30px;
+    
+}
+/* service right content responsive style */
+
+.service-right-content h4{
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 70px;
+    text-align: center;
+    
+}
+.service-right-content p{
+    margin-bottom: 30px;
+    font-size: 30px;
+    line-height:50px;
+    text-align: center;
+    
+}
+.service-right-content span {
+
+    font-size:30px;
+    font-weight: 500;
+    line-height: 40px;
+    
+}
+
 }
