--- a/home.css
+++ b/home.css
@@ -16,7 +16,14 @@ body {
     width: min(90%, 1120px);
     margin-inline: auto;
 }
-
+nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* display: flex; */
+  
+}
 .desktop{
 background-color: #111;
 width: 100%;
@@ -77,6 +84,48 @@ a:hover{
 
 
   */
+  /* test menu */
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu li {
+  position: relative;
+  display: inline-block;
+}
+
+.menu > li > a {
+  /* padding: 10px 15px;
+  display: block; */
+  /* background: #5f6ad4; */
+  color: white;
+  text-decoration: none;
+}
+
+.submenu {
+  display: none;
+  position: absolute;
+  background: #333;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  min-width: 150px;
+  z-index: 1000;
+}
+
+.submenu li a {
+  display: block;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown:hover .submenu {
+  display: block;
+}
+
 /* Hero section */
 .hero {
     background:linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.6)), url('https://www.m3techgroup.com/wp-content/uploads/2024/08/M3TEGR_AUGGLOWBLOG3_CORPORATE-TRAINING-ROOMS_HOUSTON-TX_PHOTO-1.jpg') no-repeat center center/cover;
