--- a/Pages/ourservices.css
+++ b/Pages/ourservices.css
@@ -17,6 +17,102 @@ body{
     max-width: 1120px;
     margin-inline:auto;
 }
+/* header menu style */
+nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* display: flex; */
+  
+}
+.desktop{
+background-color: #111;
+width: 100%;
+height: 3.3rem;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 20px;
+}
+.desktop h1{
+    margin-top: 1.5rem;
+    color: white;
+}
+
+img{
+    width: 80px;
+}
+.logo{
+    margin-top: 5px;
+    display: flex;
+}
+
+.link-menus{
+    list-style: none;
+    gap: 2rem;
+    display: flex;
+   
+}
+
+a{
+    color: white;
+   text-transform: uppercase;
+    text-decoration: none;
+    
+}
+
+a:hover{
+  background-color: #218838;
+  color: #ffffff;
+  padding: 3px;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+.btn-menus{
+    background-color: #218838;
+    color: #ffffff;
+}
+
+  /* test menu */
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu li {
+  position: relative;
+  display: inline-block;
+}
+
+.menu > li > a {
+
+  color: white;
+  text-decoration: none;
+}
+
+.submenu {
+  display: none;
+  position: absolute;
+  background: #333;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  min-width: 150px;
+  z-index: 1000;
+}
+
+.submenu li a {
+  display: block;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown:hover .submenu {
+  display: block;
+}
 /* service heading style */
 .services-heading{
     background-image: url("https://templatemo.com/templates/templatemo_574_mexant/assets/images/heading-bg.jpg");
