--- a/Pages/about.css
+++ b/Pages/about.css
@@ -56,7 +56,7 @@ header .main-nav{
 }
 .main-nav img{
     width: 100%;
-    /* overflow: hidden; */
+   
 }
 .nav-links li{
     padding-left: 25px;
@@ -352,6 +352,57 @@ header .main-nav{
     font-size: 15px;
     line-height: 26px;
     color: #212741;
+}
+/* partners section style */
+
+.our-partners{
+   margin-top: 120px;
+    background-color: #212741;
+    padding: 100px 0px;
+    
+    
+}
+ .our-partners .container{
+   max-width: 1120px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 20px;
+   
+
+}
+
+.container .item img{
+   width: 100%;
+   margin: 0px 15px;
+   cursor: pointer;
+
+}
+/* footer section style */
+
+footer{
+    background-color: #181d30;
+    text-align: center;
+    padding: 25px 0px;
+   
+}
+footer .container{
+    display: flex;
+    flex-direction: column;
+    
+   
+}
+footer p{
+    color: #fff;
+    font-weight: 300;
+    text-align: center;
+    font-size: 15px;
+    line-height: 26px;
+
+}
+footer p a{
+    text-decoration: none;
+    color: #ff511a;
 }
 
 /* RESPONSIVE DESIGN OF THE ABOUT PAGE*/
