--- a/Pages/ourservices.css
+++ b/Pages/ourservices.css
@@ -376,6 +376,57 @@ header .main-nav{
     line-height: 25px;
     
 }
+/* partners section style */
+
+.our-partners{
+   margin-top: 120px;
+    background-color: #212741;
+    padding: 100px 0px;
+    
+    
+}
+ .our-partners .container{
+   max-width: 1120px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 20px;
+   
+
+}
+
+.container .item img{
+   width: 100%;
+   margin: 0px 15px;
+   cursor: pointer;
+
+}
+/* footer section style */
+
+footer{
+    background-color: #181d30;
+    text-align: center;
+    padding: 25px 0px;
+   
+}
+footer .container{
+    display: flex;
+    flex-direction: column;
+    
+   
+}
+footer p{
+    color: #fff;
+    font-weight: 300;
+    text-align: center;
+    font-size: 15px;
+    line-height: 26px;
+
+}
+footer p a{
+    text-decoration: none;
+    color: #ff511a;
+}
 
 /* Responsive Design For Mobiles and Tablets */
 @media(max-width:768px){
