--- a/home.css
+++ b/home.css
@@ -600,11 +600,7 @@ margin-top: 90px;
    margin-top: 120px;
     background-color: #212741;
     padding: 100px 0px;
-    /*  */
-    /* position: fixed;
-    bottom:0;
-    left: 0;
-    width: 100%; */
+    
     
 }
  .our-partners .container{
@@ -629,11 +625,7 @@ footer{
     background-color: #181d30;
     text-align: center;
     padding: 25px 0px;
-    /* position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%; */
-    /* margin-top: 1000px; */
+   
 }
 footer .container{
     display: flex;
@@ -668,16 +660,12 @@ footer p a{
     font-size: 16px;
   }
     /* services section Responsive style */
-
-
     .services-container{
       margin-top: 120px;
       display: grid;
       grid-template-columns: 1fr;
     max-width: 400px;
       gap: 20px;
-     
-
         
     }
   
@@ -743,12 +731,17 @@ footer p a{
   
 /* calculator Responsive style */
 .calculator{
-  display: grid;
-  grid-template-columns: 1fr;
+ 
+  margin-top: 60px;
   max-width: 400px;
 }
 .calculator .container{
-  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 30px;
+
 }
 
 /* testimonials section Responsive style */  
