--- a/home.css
+++ b/home.css
@@ -754,6 +754,52 @@ footer p a{
   .testimonial-content {
     text-align: center;
   }
+  /* our partners and footers sections Responsive style */
+     
+.our-partners{
+   margin-top: 30px;
+    background-color: #212741;
+    padding: 100px 0px;
+    max-width: 400px;
+     /* position: fixed;
+   bottom: 0;
+   left: 0; */
+ /* margin-bottom: 120px; */
+   /* height:500px; */
+   
+    
+    
+}
+ .our-partners .container{
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+   
+
+
+}
+/* footer section Responsive style */
+
+footer{
+    background-color: #181d30;
+    text-align: center;
+    padding: 25px 0px;
+    max-width: 400px;
+    position:fixed;
+    bottom: 0;
+    left: 0;
+   margin-bottom: 0;
+   width: 100%;
+  
+}
+footer .container{
+    display: flex;
+    flex-direction: column;
+    
+   
+
+}
   
   
 }
