--- a/home.css
+++ b/home.css
@@ -899,11 +899,11 @@ footer{
     text-align: center;
     padding: 25px 0px;
     max-width: 400px;
-    position:fixed;
+    /* position:sticky;
     bottom: 0;
     left: 0;
-   margin-bottom: 0;
-   width: 100%;
+   margin-bottom: 0; */
+   /* width: 100%; */
   
 }
 footer .container{
