--- a/Pages/contactus.css
+++ b/Pages/contactus.css
@@ -342,7 +342,7 @@ footer p a{
     text-decoration: none;
     color: #ff511a;
 }
-.mobile_nav{
+.mobile-nav{
     display: none;
 }
 .hamburger{
@@ -350,53 +350,59 @@ footer p a{
 }
 /* Responsive Design of contact us page */
 @media (max-width:768px){
+     /* start of the mobile menu */
      
-  /* Haburger style */
-    .hamburger{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 20%;
-        right: 10%;
-        margin-top: 2rem;
-        background-color: #5f6ad4;
-        color: white;
-        padding: 10px;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        font-size: 1.25rem;
-    
-    }
-    header{
-      height: 0;
-    }
+.mobile-nav {
+  display: flex;
+  flex-direction: column;
+ background-color: rgb(45, 8, 8);
+  gap: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+}
 
-  header .main-nav{
+.mobile-nav[data-visible="true"] {
+  transform: translateX(0%);
+}
+header{
+      height: 130px;
+    } 
+
+header .main-nav{
     display: none;
   }
- 
-    .hamburger i[data-visible="true"]{
-        display: block;
-    }
 
-    .hamburger i[data-visible="false"]{
-        display: none;
-    }
-    .mobile_nav{
-        display: flex;
-        flex-direction: column;
-         background-color: rgb(45, 8, 8);
-        gap: 10px; 
-         position: fixed;
-         top: 10;
-         left: 0;
-         width: 100%;
-       height: auto;
-       
-    } 
-    .mobile_nav .logo-img{
+.hamburger {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1100;
+  background-color: #5f6ad4;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+}
+
+.hamburger i[data-visible="false"] {
+  display: none;
+} 
+
+.hamburger i[data-visible="true"] {
+  display: block;
+}
+   
+    .mobile-nav .logo-img{
     font-size: 32px;
     font-weight: 800;
     text-transform: uppercase;
@@ -406,17 +412,17 @@ footer p a{
 
     }
     
-    .mobile_nav .nav-links{
+    .mobile-nav .nav-links{
         display: flex;
         flex-direction: column;
-        background-color: white;
+        background-color: white; 
         
       align-items: center; 
         gap: 10px;
         list-style: none;
         
     }
-    .mobile_nav .nav-links li a{
+    .mobile-nav .nav-links li a{
     
         font-size: 20px;
         text-transform:capitalize;
@@ -453,6 +459,9 @@ background-color: white;
 }
 
 
+
+     
+
    /* infor-boxes Responive style */
 .maps .container .info-grid{
     display: grid;
@@ -477,12 +486,7 @@ background-color: white;
     background-color: #212741;
     padding: 100px 0px;
     max-width: 400px;
-     position: fixed;
-   bottom: 0;
-   left: 0;
- margin-bottom: 120px;
-   height:500px;
-   
+ 
     
     
 }
@@ -502,12 +506,7 @@ footer{
     text-align: center;
     padding: 25px 0px;
     max-width: 400px;
-    position:fixed;
-    bottom: 0;
-    left: 0;
-   margin-bottom: 0;
-   width: 100%;
-  
+   
 }
 footer .container{
     display: flex;
